--- a/style.css
+++ b/style.css
@@ -84,3 +84,19 @@ img {
     text-align: center;
     padding: 3em 3em;
 }
+.video-card {
+    background-color: #3b5998;
+    color: white;
+    padding: 1em;
+    border-radius: 0.5em;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    width: 320px;
+    margin: 2em auto;
+    text-align: center;
+    border: 4px solid #0066ff; /* blue outline */
+}
+
+.video-card video {
+    width: 100%;
+    border-radius: 0.5em;
+}
