--- a/style.css
+++ b/style.css
@@ -76,7 +76,22 @@ img {
     margin-bottom: 0.5em;
     text-align: center;
 }
+.video-card {
+    background-color: #3b5998;
+    color: white;
+    padding: 1em;
+    border-radius: 0.5em;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    width: 320px;
+    margin: 2em auto;
+    text-align: center;
+    border: 4px solid #0066ff; /* blue outline */
+}
 
+.video-card video {
+    width: 100%;
+    border-radius: 0.5em;
+}
 /* Styling for a footer section to take a bit of space at the bottom of the page */
 .footer{
     background-color: #3b5998;
