--- a/style.css
+++ b/style.css
@@ -89,8 +89,7 @@ img {
 }
 
 .video-card video {
-    width: 100%;
-    border-radius: 0.5em;
+    width: 320px;
 }
 /* Styling for a footer section to take a bit of space at the bottom of the page */
 .footer{
